--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,11 @@
         android:name="com.example.taskmanager.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+
+    <fragment
+        android:id="@+id/taskFragment"
+        android:name="com.example.taskmanager.ui.task.TaskFragment"
+        android:label="Task"
+        tools:layout="@layout/fragment_task" />
+
 </navigation>
