added the code 1st hw

--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -16,7 +16,8 @@
         android:paddingStart="16dp"
         android:textColor="@color/white"
         android:hint="Title"
-        android:textColorHint="@color/gray"/>
+        android:textColorHint="@color/gray"
+        tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/et_desc"
