--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,4 +29,10 @@
         android:label="Task"
         tools:layout="@layout/fragment_task" />
 
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.example.taskmanager.ui.profile.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_profile" />
+
 </navigation>
