added the code 2nd hw

--- a/app/src/main/res/layout/fragment_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_on_boarding.xml
@@ -3,12 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.onBoarding.OnBoardingFragment">
 
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/viewpager2"/>
+        android:id="@+id/view_pager"/>
+
+    <me.relex.circleindicator.CircleIndicator3
+        android:id="@+id/indicator"
+        android:layout_width="match_parent"
+        android:layout_gravity="bottom"
+        android:layout_height="58dp"
+        android:layout_marginBottom="55dp"
+        app:ci_drawable="@drawable/ic_circle_selected"
+        app:ci_drawable_unselected="@drawable/ic_circle_unselected"
+        />
 
 
 </FrameLayout>
