--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,35 +26,51 @@
 
     </androidx.cardview.widget.CardView>
 
-    <EditText
-        android:id="@+id/et_name"
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="Text"
-        app:layout_constraintStart_toEndOf="@+id/cv_img"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="76dp"
+        android:hint="Name"
         android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="24sp"
-        android:paddingStart="16dp"
-        android:textColor="@color/white"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintStart_toEndOf="@+id/cv_img"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
 
-    <EditText
-        android:id="@+id/et_age"
-        android:layout_width="100dp"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_name"
+            android:inputType="textPersonName"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
         android:hint="Age"
         app:layout_constraintTop_toBottomOf="@+id/cv_img"
         android:layout_marginHorizontal="20dp"
         android:layout_margin="25dp"
-        android:paddingStart="20dp"
         app:layout_constraintStart_toStartOf="parent"
         android:textColorHint="@color/gray"
-        android:textSize="24sp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_age"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textSize="20sp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
 
 
     <com.google.android.material.button.MaterialButton
